--- a/package.json
+++ b/package.json
@@ -11,16 +11,21 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "async-storage": "^0.1.0",
+    "axios": "^1.6.7",
     "expo": "~49.0.15",
+    "expo-image-picker": "~14.3.2",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
+    "react-icons": "^5.0.1",
     "react-native": "0.72.6",
+    "react-native-alert-notification": "^0.4.0",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-image-picker": "^7.1.0",
-    "react-native-safe-area-context": "4.6.3",
+    "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "~3.22.0",
     "react-native-vector-icons": "^10.0.3",
-    "expo-image-picker": "~14.3.2"
+    "sync-storage": "^0.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
