--- a/package.json
+++ b/package.json
@@ -14,16 +14,19 @@
     "async-storage": "^0.1.0",
     "axios": "^1.6.7",
     "expo": "~49.0.15",
+    "expo-av": "^13.10.5",
     "expo-image-picker": "~14.3.2",
     "expo-status-bar": "~1.6.0",
+    "install": "^0.13.0",
     "react": "18.2.0",
     "react-icons": "^5.0.1",
     "react-native": "0.72.6",
     "react-native-alert-notification": "^0.4.0",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-image-picker": "^7.1.0",
-    "react-native-safe-area-context": "^4.9.0",
+    "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-sound": "^0.11.2",
     "react-native-vector-icons": "^10.0.3",
     "sync-storage": "^0.4.2"
   },
